--- a/tasks.org
+++ b/tasks.org
@@ -1,6 +1,7 @@
 * DONE cleanup old pastes
   CLOSED: [2012-02-08 Wed 01:13]
-* post compression with gzip and/or xz-utils
+* DONE post compression with gzip and/or xz-utils
+  CLOSED: [2012-02-12 Sun 00:30]
 * DONE check post size
   CLOSED: [2012-02-07 Tue 00:46]
 * DONE remove temporary assertions
@@ -9,8 +10,8 @@
   CLOSED: [2012-02-07 Tue 00:46]
 * DONE prepare the PKGBUILD
   CLOSED: [2012-02-09 Thu 01:04]
-* funki konami code (color/blink paste binouse)
 * DONE be carefull of DDOS
   CLOSED: [2012-02-07 Tue 23:06]
 * DONE add the ip of the poster
   CLOSED: [2012-02-08 Wed 09:43]
+* funki konami code (color/blink paste binouse)
